--- a/index.html
+++ b/index.html
@@ -206,14 +206,9 @@
 // TestFlight 빌드 가져오기
 async function fetchTestFlightBuilds() {
     try {
-        // Info.plist에서 가져온 CFBundleIdentifier
         const bundleIdentifier = 'com.mangchi.ios';
-
-        // Netlify Functions 호출, bundleIdentifier를 쿼리 파라미터로 포함
-        let response = await fetch(`/api/fetch-testflight-builds?bundleId=${encodeURIComponent(bundleIdentifier)}`, {
-            headers: {
-                'Accept': 'application/json'
-            }
+        const response = await fetch(`/api/fetch-testflight-builds?bundleId=${encodeURIComponent(bundleIdentifier)}`, {
+            headers: { 'Accept': 'application/json' }
         });
 
         if (!response.ok) {
@@ -221,18 +216,13 @@ async function fetchTestFlightBuilds() {
         }
 
         const builds = await response.json();
-        console.log('TestFlight 빌드 응답:', builds);
-
-        // 빌드가 bundleIdentifier와 일치하는지 확인
         const filteredBuilds = builds.filter(build => build.bundleId === bundleIdentifier);
-        
+
         if (filteredBuilds.length === 0) {
             throw new Error('해당 앱에 대한 TestFlight 빌드가 없습니다.');
         }
 
-        // 빌드 렌더링
         renderTestFlightBuilds(filteredBuilds);
-
     } catch (error) {
         console.error('TestFlight 빌드 가져오기 실패:', error);
         testflightList.innerHTML = `<p class="text-red-600">TestFlight 빌드를 불러오지 못했습니다: ${error.message}. 나중에 다시 시도하세요.</p>`;
